--- a/pelitaProject/kasir/static/kasir/css/style.css
+++ b/pelitaProject/kasir/static/kasir/css/style.css
@@ -1,28 +1,28 @@
 body {
   background-color: #f8f9fa;
 }
-.sidebar {
+#sidebar {
   background-color: #0d6efd;
   min-height: 100vh;
   color: white;
   width: 250px;
 }
-.sidebar a {
+#sidebar a {
   color: white;
   text-decoration: none;
   padding: 10px;
   display: block;
   border-radius: 8px;
 }
-.sidebar a.active, .sidebar a:hover {
+#sidebar a.active, #sidebar a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 .content {
   padding: 20px;
 }
 
-@media (max-width: 400px) {
-  .sidebar {
+@media (max-width: 768px) {
+  #sidebar {
     position: fixed;
     top: 0;
     left: -250px;
@@ -31,10 +31,10 @@ body {
     transition: all 0.3s;
     z-index: 1000;
   }
-  .sidebar.show {
+  #sidebar.show {
     left: 0;
   }
-  .overlay {
+  #overlay {
     position: fixed;
     display: none;
     top: 0;
@@ -44,7 +44,7 @@ body {
     background: rgba(0,0,0,0.5);
     z-index: 999;
   }
-  .overlay.show {
+  #overlay.show {
     display: block;
   }
 }
