--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -45,16 +45,16 @@
 </aside>
 
   <!-- Overlay for Mobile -->
-  <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
-  <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
-    <i class="fas fa-bars"></i>
-  </button>
+  <!-- <div id="overlay" class="overlay" onclick="toggleSidebar()"></div> -->
 
 
   <!-- Main Content -->
   <div class="flex-grow-1">
     <!-- Top Navbar -->
     <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
+      <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
+        <i class="fas fa-bars"></i>
+      </button>
       <div class="text-sm font-normal text-[#1E1E1E]">Dashboard</div>
       <div class="flex items-center space-x-2">
         <div class="w-8 h-8 rounded-full bg-[#0052CC] flex items-center justify-center text-white font-semibold text-xs select-none">
