--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -45,7 +45,7 @@
 </aside>
 
   <!-- Overlay for Mobile -->
-  <!-- <div id="overlay" class="overlay" onclick="toggleSidebar()"></div> -->
+  <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
 
 
   <!-- Main Content -->
