--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -22,7 +22,7 @@
 {% block content %}
 <div class="flex min-h-screen">
   <!-- Sidebar -->
-  <aside class="bg-[#0052CC] w-56 flex flex-col justify-between text-white" id="sidebar">
+  <aside class="sidebar bg-[#0052CC] flex flex-col justify-between text-white" id="sidebar">
     <div>
       <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
         PELITAKAS
@@ -49,7 +49,7 @@
 
 
   <!-- Main Content -->
-  <div class="flex-grow-1">
+  <div class="content flex-grow-1">
     <!-- Top Navbar -->
     <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
       <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
