--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -21,7 +21,7 @@
 
 {% block content %}
 <div class="flex min-h-screen">
-<aside class="bg-[#0052CC] w-56 flex flex-col justify-between text-white">
+<aside class="sidebar bg-[#0052CC] flex flex-col justify-between text-white" id="sidebar">
     <div>
       <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
         PELITAKAS
@@ -55,15 +55,16 @@
     </a>
   </aside>
 
-  <main class="flex-1 p-6 overflow-auto">
+  <main class="content flex-1 p-6 overflow-auto">
     <header
-      class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4"
-    >
+      class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4">
+      <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
+        <i class="fas fa-bars"></i>
+      </button>
       <h1 class="text-base font-semibold text-[#1E293B]">Laporan</h1>
       <div class="flex items-center gap-3">
         <div
-          class="w-8 h-8 rounded-full bg-[#0B5ED7] text-white flex items-center justify-center font-semibold text-sm"
-        >
+          class="w-8 h-8 rounded-full bg-[#0B5ED7] text-white flex items-center justify-center font-semibold text-sm">
           AD
         </div>
         <span class="text-sm text-[#475569]">{{user}}</span>
