--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -43,6 +43,9 @@
               <span>Keluar</span>
             </a>
         </aside>
+
+	<div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
+
           
         <div class="content flex-1 flex flex-col">
         <!-- Main Content -->
