--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -49,7 +49,7 @@
 
 
   <!-- Main Content -->
-  <div class="content flex-grow-1">
+  <div class="flex-grow-1">
     <!-- Top Navbar -->
     <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
       <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
