--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -67,7 +67,7 @@
     <div class="content">
       <!-- Cards Summary -->
       <div class="row g-3 mb-4">
-        <div class="col-md-3 col-6">
+        <div class="col-md-3 col-sm-6 col-12">
           <div class="card shadow-sm text-center">
             <div class="card-body">
               <h6>Total Penjualan</h6>
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-6">
+        <div class="col-md-3 col-sm-6 col-12">
           <div class="card shadow-sm text-center">
             <div class="card-body">
               <h6>Pendapatan</h6>
@@ -83,7 +83,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-6">
+        <div class="col-md-3 col-sm-6 col-12">
           <div class="card shadow-sm text-center">
             <div class="card-body">
               <h6>Total Item Terjual</h6>
@@ -91,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-6">
+        <div class="col-md-3 col-sm-6 col-12">
           <div class="card shadow-sm text-center">
             <div class="card-body">
               <h6>Produk</h6>
