--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -44,10 +44,10 @@
             </a>
         </aside>
 
-	<div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
+	      <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
 
           
-        <div class="content flex-1 flex flex-col">
+        <div class="flex-1 flex flex-col">
         <!-- Main Content -->
         <!-- <div class="flex-grow-1"> -->
             <!-- <nav class="navbar navbar-light bg-light shadow-sm">
