--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -56,7 +56,7 @@
     </a>
   </aside>
           
-        <div class="content flex-1 flex flex-col">
+        <div class="flex-1 flex flex-col">
         <!-- Main Content -->
         <!-- <div class="flex-grow-1"> -->
             <!-- <nav class="navbar navbar-light bg-light shadow-sm">
