--- a/pelitaProject/kasir/templates/kasir/product.html
+++ b/pelitaProject/kasir/templates/kasir/product.html
@@ -24,7 +24,7 @@
 <aside class="sidebar bg-[#0052CC] flex flex-col justify-between text-white" id="sidebar">
     <div>
       <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
-        Quiland
+        PELITAKAS
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
         <a href="{% url 'admindashboard' %}" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
