--- a/pelitaProject/kasir/static/kasir/css/style.css
+++ b/pelitaProject/kasir/static/kasir/css/style.css
@@ -27,9 +27,8 @@
     margin-left: 250px;
     padding: 20px;
     transition: margin-left 0.3s, width 0.3s;
-    width: 100%;
+    width: calc(100% - 250px);
 }
-
 .content.full {
     margin-left: 80px;
     width: calc(100% - 80px);
@@ -46,5 +45,20 @@
     .content {
         margin-left: 0;
         width: 100%;
+    }
+    
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 900;
+        display: none;
+    }
+
+    #overlay.show {
+        display: block;
     }
 }
