--- a/pelitaProject/kasir/templates/kasir/product.html
+++ b/pelitaProject/kasir/templates/kasir/product.html
@@ -55,8 +55,11 @@
     </a>
   </aside>
 
+  <!-- Overlay for Mobile -->
+  <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
+
   <!-- Main content -->
-  <div class="content flex-1 flex flex-col">
+  <div class="flex-1 flex flex-col">
     <!-- Top bar -->
     <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
       <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
