--- a/pelitaProject/kasir/templates/kasir/product.html
+++ b/pelitaProject/kasir/templates/kasir/product.html
@@ -75,7 +75,7 @@
     </header>
 
     <!-- Content -->
-    <main class="flex-1 overflow-auto p-6 bg-[#F8FCFC]">
+    <main class="content flex-1 overflow-auto p-6 bg-[#F8FCFC]">
       <section>
         <h2 class="font-semibold text-[#1E1E1E] text-base mb-3">Manajemen Produk</h2>
         <div class="mb-6 flex space-x-2">
