--- a/pelitaProject/kasir/static/kasir/css/kasir.css
+++ b/pelitaProject/kasir/static/kasir/css/kasir.css
@@ -69,4 +69,18 @@
         margin-left: 0;
         width: 100%;
     }
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 900;
+        display: none;
+    }
+
+    #overlay.show {
+        display: block;
+    }
 }
