--- a/pelitaProject/kasir/static/kasir/css/kasir.css
+++ b/pelitaProject/kasir/static/kasir/css/kasir.css
@@ -69,7 +69,7 @@
         margin-left: 0;
         width: 100%;
     }
-    #overlay {
+    /* #overlay {
         position: fixed;
         top: 0;
         left: 0;
@@ -82,5 +82,5 @@
 
     #overlay.show {
         display: block;
-    }
+    } */
 }
