--- a/pelitaProject/kasir/static/kasir/css/kasir.css
+++ b/pelitaProject/kasir/static/kasir/css/kasir.css
@@ -1,4 +1,7 @@
-/* Sidebar Expand/Collapse Behavior */
+body {
+  background-color: #f8f9fa;
+  font-family: 'Inter', sans-serif;
+}
 #sidebar {
     width: 250px;
     height: 100vh;
@@ -27,14 +30,12 @@
     margin-left: 250px;
     padding: 20px;
     transition: margin-left 0.3s, width 0.3s;
-    width: 100%;
+    width: calc(100% - 250px);
 }
-
 .content.full {
     margin-left: 80px;
     width: calc(100% - 80px);
 }
-
 .card-product {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
@@ -69,18 +70,4 @@
         margin-left: 0;
         width: 100%;
     }
-    /* #overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: rgba(0, 0, 0, 0.5);
-        z-index: 900;
-        display: none;
-    }
-
-    #overlay.show {
-        display: block;
-    } */
 }
