--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -22,7 +22,7 @@
 {% block content %}
 <div class="flex min-h-screen">
   <!-- Sidebar -->
-  <aside class="sidebar bg-[#0052CC] flex flex-col justify-between text-white" id="sidebar">
+  <aside class="bg-[#0052CC] flex flex-col justify-between text-white" id="sidebar">
     <div>
       <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
         PELITAKAS
