--- a/pelitaProject/kasir/templates/kasir/settings.html
+++ b/pelitaProject/kasir/templates/kasir/settings.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
   />
-  <link href="{% static 'kasir/css/style.css' %}" rel="stylesheet">
+  <link href="{% static 'kasir/css/kasir.css' %}" rel="stylesheet">
 {% endblock style %}
 
 {% block content %}
