--- a/pelitaProject/kasir/static/kasir/css/kasir.css
+++ b/pelitaProject/kasir/static/kasir/css/kasir.css
@@ -14,6 +14,14 @@
   .sidebar a.active, .sidebar a:hover {
     background-color: rgba(255, 255, 255, 0.2);
   }
+  #sidebar.collapsed {
+    /* Misalnya sidebar lebih kecil saat collapsed */
+    width: 50px;
+  }
+  .content.full {
+    /* Misalnya konten utama menggeser ke kanan saat sidebar collapsed */
+    margin-left: 50px;
+  }  
   .content {
     padding: 20px;
   }
