--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -55,6 +55,9 @@
       <span>Keluar</span>
     </a>
   </aside>
+
+  <!-- Overlay for Mobile -->
+  <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
           
         <div class="flex-1 flex flex-col">
         <!-- Main Content -->
