--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -59,7 +59,7 @@
         <!-- Overlay for Mobile -->
         <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
           
-        <div class="flex-1 flex flex-col">
+        <div class="flex-grow-1">
         <!-- Main Content -->
         <!-- <div class="flex-grow-1"> -->
             <!-- <nav class="navbar navbar-light bg-light shadow-sm">
@@ -75,9 +75,9 @@
                 </div>
             </nav> -->
             <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
-      		<button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
-        	  <i class="fas fa-bars"></i>
-      		</button>
+      		      <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
+        	        <i class="fas fa-bars"></i>
+      		      </button>
                 <div class="text-sm font-normal text-[#1E1E1E]">Cashier</div>
                 <div class="flex items-center space-x-2">
                   <div class="w-8 h-8 rounded-full bg-[#0052CC] flex items-center justify-center text-white font-semibold text-xs select-none">
