--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -45,27 +45,12 @@
         </aside>
 
 	      <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
-
           
         <div class="flex-1 flex flex-col">
-        <!-- Main Content -->
-        <!-- <div class="flex-grow-1"> -->
-            <!-- <nav class="navbar navbar-light bg-light shadow-sm">
-                <div class="container-fluid">
-      		  <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
-        	    <i class="fas fa-bars"></i>
-      		  </button>
-                  <h5 class="mb-0">Kasir</h5>
-                  <div class="d-flex align-items-center">
-                    <span class="me-2">{{user}}</span>
-                    <div class="bg-primary rounded-circle text-white d-flex justify-content-center align-items-center" style="width:40px; height:40px;">KS</div>
-                  </div>
-                </div>
-            </nav> -->
             <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
-      		<button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
-        	  <i class="fas fa-bars"></i>
-      		</button>
+      		      <button class="hamburger block md:hidden text-xl" id="hamburger">
+        	        <i class="fas fa-bars"></i>
+      		      </button>
                 <div class="text-sm font-normal text-[#1E1E1E]">Cashier</div>
                 <div class="flex items-center space-x-2">
                   <div class="w-8 h-8 rounded-full bg-[#0052CC] flex items-center justify-center text-white font-semibold text-xs select-none">
@@ -73,7 +58,7 @@
                   </div>
                   <span class="text-xs text-[#1E1E1E] font-normal">{{user}}</span>
                 </div>
-              </header>
+            </header>
     
             <div class="content container-fluid mt-4">
                 <div class="row">
